--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -271,3 +271,13 @@ $input-padding:             1.0rem !default;
 $input-font-size:           $font-size !default; // Default font-size is 15px
 $input-font-color:          $font-color;
 $input-border-color:        map-get($theme-maps, default);
+
+// ================================
+// TEXT VARIABLES
+// ================================
+$text-alignment: (
+	left:                   left,
+	right:                  right,
+	centered:               center,
+	justified:              justify
+) !default;
